[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Enimies/Boss/Boss_turret.gd" type="Script" id=1]
[ext_resource path="res://Engine/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Engine/Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Engine/HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://icon2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Laser.png" type="Texture" id=6]
[ext_resource path="res://Assets/Enimies/Boss/Itens_drop_boss.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.6286, 31.0563 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30.4538, 30.8815 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30.9783, 31.2311 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 498.659, 6.45739 )

[node name="Boss" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 2 )

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 3 )]
MaxHealth = 50

[node name="Timer_spawn" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Timer_change_pow" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Timer_laser" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Laser_sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 514.267, -0.850861 )
rotation = 1.5708
texture = ExtResource( 6 )

[node name="Laser_hitbox" parent="." instance=ExtResource( 2 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Laser_hitbox" index="0"]
position = Vector2( 515.6, -1.35835 )
shape = SubResource( 4 )
disabled = true

[node name="Timer_missile_laser" type="Timer" parent="."]
one_shot = true

[node name="Timer_shoot" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Timer_pulling" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Timer_many_bullets" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Itens_drop" parent="." instance=ExtResource( 7 )]
[connection signal="Died" from="." to="Itens_drop" method="_on_Boss_Died"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="Timer_spawn" to="." method="_on_Timer_spawn_timeout"]
[connection signal="timeout" from="Timer_change_pow" to="." method="_on_Timer_change_pow_timeout"]
[connection signal="timeout" from="Timer_laser" to="." method="_on_Timer_laser_timeout"]
[connection signal="timeout" from="Timer_missile_laser" to="." method="_on_Timer_missile_laser_timeout"]
[connection signal="timeout" from="Timer_pulling" to="." method="_on_Timer_pulling_timeout"]
[connection signal="timeout" from="Timer_many_bullets" to="." method="_on_Timer_many_bullets_timeout"]

[editable path="Hitbox"]

[editable path="HurtBox"]

[editable path="Laser_hitbox"]
